music.sass: Fix player element being too high

--- a/_assets/css/_music.sass
+++ b/_assets/css/_music.sass
@@ -53,7 +53,8 @@ body.music.launched
 .player
   clip-path: url('#swipe')
   display: none
-  margin: 40px auto
+  margin: 0 auto
+  padding: 40px 0
   width: 100%
   text-align: center
   text-shadow: 3px 3px 1px #444
